# weby-wallet-pwa

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  components.json  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml
crates/wallet-wasm/: Cargo.toml
crates/wallet-wasm/src/: lib.rs
docs/: HD_WALLET.md  KEY_MODEL.md  MINING.md  PAYMENTS.md  PROTOCOL.md  SECURITY.md
scripts/: gen-og.mjs
src/: app.css  app.d.ts  app.html  service-worker.ts
src/lib/components/ui/: Loader.svelte  selection-button.svelte  spinner.svelte
src/lib/components/ui/button/: button.svelte
src/lib/components/ui/card/: card.svelte
src/lib/components/ui/input/: input.svelte
src/lib/components/wallet/: AppDialog.svelte  AppShell.svelte  BackupWarning.svelte  BalanceCard.svelte  Dashboard.svelte  DashboardView.svelte  EncryptionSetup.svelte  Header.svelte  InsertForm.svelte  InstallPrompt.svelte  LicenseDialog.svelte  LockScreen.svelte  MergeView.svelte  MinerPanel.svelte  MiningView.svelte  MobileMenu.svelte  MobileSettingsDialog.svelte  PayForm.svelte  PaymentResult.svelte  ReceiveGift.svelte  RecoveryView.svelte  SettingsPanel.svelte  SetupWizard.svelte  Sidebar.svelte  StatsPanel.svelte  StatsView.svelte  VerifyForm.svelte  VerifyView.svelte  WebcashList.svelte
src/lib/core/: encryption.ts  keep-alive.ts  migration.ts  miner.ts  persistence.ts  reset.ts  server.ts  storage.ts  types.ts  wallet.ts  wasm-stubs.ts  wasm.ts  webcasa.ts
src/lib/stores/: navigation.svelte.ts  network.svelte.ts  settings.svelte.ts  wallet.svelte.ts
src/lib/workers/: miner.worker.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte
static/: manifest.json
worker/: .gitignore  og-worker.js  package.json  wrangler.toml
worker/src/: index.js  logo.js
