[package]
name = "wallet-wasm"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
harmoniis-wallet = { path = "/Users/george/workspace/harmoniis/marketplace/harmoniis-wallet", default-features = false, features = ["wasm", "gpu-wasm"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
getrandom_0_3 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
hex = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"
