[package]
name = "wallet-wasm"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
harmoniis-wallet = { version = "0.1.91", default-features = false, features = ["wasm", "gpu-wasm"] }
sha2 = "0.10"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
getrandom_0_3 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
base64 = "0.22"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
wgpu = { version = "29", features = ["webgpu"] }
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
